--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       width: 90px;
       margin-right: 20px;
     }
+    .trusted-title{
+      margin: 100px 0;
+    }
 
     @media screen and (max-width:576px) {
       .carousel-text {
@@ -306,7 +309,7 @@
     
 
     <section class="container my-5">
-      <div class="trusted-title text-center my-5">
+      <div class="trusted-title text-center">
         <h1>Trusted by over 800+ companies</h1>
       </div>
       <div class="trusted-partner row row-cols-6 g-3 justify-content-between  align-items-center">
