--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- goolge-font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -312,7 +314,7 @@
       <div class="trusted-title text-center">
         <h1>Trusted by over 800+ companies</h1>
       </div>
-      <div class="trusted-partner row row-cols-6 g-3 justify-content-between  align-items-center">
+      <div class="trusted-partner row row-cols-6 g-3 justify-content-between  align-items-center mb-5">
         <div class="single-partner col"><img src="./assets/images/company/company-1.png" alt=""></div>
         <div class="single-partner col"><img src="./assets/images/company/company-2.png" alt=""></div>
         <div class="single-partner col"><img src="./assets/images/company/company-3.png" alt=""></div>
@@ -322,6 +324,22 @@
       </div> 
     </section>
   </main>
+  <footer class="container text-center mt-5 bg-black py-5">
+    <section class="footer-section">
+      <h1 class="text-white"><span class="text-success">Edu-bangla</span> language</h1>
+      <p class="text-white">Office 41, Zawaya Buildin, Ghala Muscat, <br>
+        Sultanate of Oman</p>
+        <p class="text-white">Privacy Ploicy  |   Terms of use</p>
+    <div class="manu">
+      <ul class="list-unstyled">
+        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5 btn bg-opacity-10" href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5 btn bg-opacity-10" href=""><i class="fa-brands fa-twitter"></i></a></li>
+        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5 btn bg-opacity-10" href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5 btn bg-opacity-10" href=""><i class="fa-brands fa-tiktok"></i></a></li>
+      </ul>
+    </div>
+    </section>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
