--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
     <!-- caroules-section-end -->
   </header>
   <main>
+    <!-- course-start-here -->
     <section class="container">
       <div class="section-title text-center my-2 my-md-4 my-lg-5">
         <h1>Discover Our Popular <br> Courses</h1>
@@ -227,8 +228,9 @@
           more course</a>
       </div>
     </section>
+<!-- course-end-here -->
 
-    <!-- card-section -->
+    <!-- working-section-start -->
     <section class="container">
       <div class="card mb-3 bg-info bg-opacity-10 border-0" style="">
         <div class="row g-0 align-items-center">
@@ -265,7 +267,9 @@
         </div>
       </div>
     </section>
-    <!-- working-section -->
+    <!-- working-section-end -->
+
+
     <section class="container bg-primary my-5 py-5 bg-opacity-75">
       <div class="row align-items-center">
         <div class="col-md-5 offset-md-1">
@@ -307,8 +311,74 @@
         </div>
       </div>
     </section>
-                  <!-- accrodion-section end-->
-    
+
+    <!-- accroding-section-start -->
+    <section class="container">
+      <div class="accordian-title text-center my-5">
+        <h1>Frequently Asked Questions</h1>
+        It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+      </div>
+      <div class="row">
+        <div class="col-md-8 offset-md-2">
+          <div class="accordion" id="accordion-item">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <h4>what the different between flex and grid?</h4>
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion-item">
+                <div class="accordion-body">
+                  <p><strong>Grid and flexbox.</strong> The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox was designed for layout in one dimension - either a row or a column. Grid was designed for two-dimensional layout - rows, and columns at the same time.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <h4>what the difference between bootstrap and tailwind</h4>
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion-item">
+                <div class="accordion-body">
+                  <p><strong>Tailwind</strong> offers predesigned widgets to build a site from scratch with fast UI development.</p>
+                  <p><strong>Bootstrap</strong>	 comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit.</p>
+                  <p><strong>Tailwind</strong> CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness.	Sites created using <strong>Bootstrap</strong> follow the generic pattern that makes them look identical.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <h4>What is css box model?</h4>
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordion-item">
+                <div class="accordion-body">
+                  <p>
+                    <strong>"box model" </strong>is used when talking about design and layout. The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFour">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  <h4>What is semantic tag?</h4>
+                </button>
+              </h2>
+              <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordion-item">
+                <div class="accordion-body">
+                  <p>The core characteristic of a semantic element is that it clearly communicated its meaning to both the developer and the browser. These elements clearly define its content. </p>
+                  <p>The HTML <strong>semantics </strong>refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML more comprehensible by better defining the different sections and layout of web pages.</p>
+                  <p><strong>@Example:</strong>section/header/main/footer.aside/etc.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- accroding-section-end -->
 
     <section class="container my-5">
       <div class="trusted-title text-center">
@@ -332,10 +402,10 @@
         <p class="text-white">Privacy Ploicy  |   Terms of use</p>
     <div class="manu">
       <ul class="list-unstyled">
-        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5 btn bg-opacity-10" href=""><i class="fa-brands fa-facebook-f"></i></a></li>
-        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5 btn bg-opacity-10" href=""><i class="fa-brands fa-twitter"></i></a></li>
-        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5 btn bg-opacity-10" href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
-        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5 btn bg-opacity-10" href=""><i class="fa-brands fa-tiktok"></i></a></li>
+        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5  bg-opacity-10" href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5  bg-opacity-10" href=""><i class="fa-brands fa-twitter"></i></a></li>
+        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5  bg-opacity-10" href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+        <li class="d-inline  ms-4"><a class="text-light bg-light  rounded-5  bg-opacity-10" href=""><i class="fa-brands fa-tiktok"></i></a></li>
       </ul>
     </div>
     </section>
