--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
                 <a class="nav-link fw-semibold" href="#">Courses</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-semibold"> Deals</a>
+                <a href="" class="nav-link fw-semibold"> Deals</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-semibold"> Success</a>
+                <a href="" class="nav-link fw-semibold"> Success</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-semibold"> About</a>
+                <a href="" class="nav-link fw-semibold"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-semibold"> Register</a>
+                <a href="" class="nav-link fw-semibold"> Register</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
