--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           <h1>Meet Our Successfull <br> Students</h1>
         <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
         </div>
-      <div class="row row-cols-4">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
         <div class="col">
           <div class="single-stu-box border border-1">
             <img class="img-fluid" src="./assets/images/student/student-1.png" alt="">
@@ -372,7 +372,7 @@
         It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
       </div>
       <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-md-8 col-12 col-lg-8 offset-md-2 offset-lg-2">
           <div class="accordion" id="accordion-item">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
@@ -433,7 +433,7 @@
     </section>
     <!-- accroding-section-end -->
 
-    <section class="container my-5">
+    <section class="container my-5 d-none d-md-none d-lg-block">
       <div class="trusted-title text-center">
         <h1>Trusted by over 800+ companies</h1>
       </div>
