--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="course-title px-lg-4 p-4 p-lg-0 p-md-0 ">
               <h4>Fundamental Of UI/UX Design</h4>
               <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
-              <h5 class="text-primary">Price : 20$</h5>
+              <h5 class="text-primary">Price : 200$</h5>
             </div>
           </div>
         </div>
@@ -175,7 +175,7 @@
           <div class="d-lg-flex d-flex flex-column flex-lg-row flex-md-row  d-md-flex justify-content-between align-items-center border border-1 rounded-2">
             <img class="course-thubmil" src="./assets/images/course/course-2.png" style="height:150px;" alt="">
             <div class="course-title px-lg-4 p-4 p-lg-0 p-md-0">
-              <h4>Fundamental Of UI/UX Design</h4>
+              <h4>Javascript Basic to advanced</h4>
               <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
               <h5 class="text-primary">Price : 20$</h5>
             </div>
@@ -185,9 +185,9 @@
           <div class="d-lg-flex d-flex flex-column flex-lg-row flex-md-row d-md-flex justify-content-between align-items-center border border-1 rounded-2">
             <img class="course-thubmil" src="./assets/images/course/course-3.png" style="height:150px;" alt="">
             <div class="course-title px-lg-4 p-4 p-lg-0 p-md-0">
-              <h4>Fundamental Of UI/UX Design</h4>
+              <h4>Fullstack Web Development</h4>
               <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
-              <h5 class="text-primary">Price : 20$</h5>
+              <h5 class="text-primary">Price : 30$</h5>
             </div>
           </div>
         </div>
@@ -195,9 +195,9 @@
           <div class="d-lg-flex d-flex flex-column flex-lg-row flex-md-row d-md-flex justify-content-between align-items-center border border-1 rounded-2">
             <img class="course-thubmil" src="./assets/images/course/course-4.png" style="height:150px;" alt="">
             <div class="course-title px-lg-4 p-4 p-lg-0 p-md-0">
-              <h4>Fundamental Of UI/UX Design</h4>
+              <h4>Digital Marketing</h4>
               <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
-              <h5 class="text-primary">Price : 20$</h5>
+              <h5 class="text-primary">Price : 10$</h5>
             </div>
           </div>
         </div>
@@ -205,9 +205,9 @@
           <div class="d-lg-flex d-flex flex-column flex-lg-row flex-md-row d-md-flex justify-content-between align-items-center border border-1 rounded-2">
             <img class="course-thubmil" src="./assets/images/course/course-5.png" style="height:150px;" alt="">
             <div class="course-title px-lg-4 p-4 p-lg-0 p-md-0">
-              <h4>Fundamental Of UI/UX Design</h4>
+              <h4>Photography Basic Rules</h4>
               <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
-              <h5 class="text-primary">Price : 20$</h5>
+              <h5 class="text-primary">Price : 30$</h5>
             </div>
           </div>
         </div>
@@ -215,9 +215,9 @@
           <div class="d-lg-flex d-flex flex-column flex-lg-row flex-md-row d-md-flex justify-content-between align-items-center border border-1 rounded-2">
             <img class="course-thubmil" src="./assets/images/course/course-6.png" style="height:150px;" alt="">
             <div class="course-title px-lg-4 p-4 p-lg-0 p-md-0">
-              <h4>Fundamental Of UI/UX Design</h4>
+              <h4>Speaking banlga language </h4>
               <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
-              <h5 class="text-primary">Price : 20$</h5>
+              <h5 class="text-primary">Price : 200$</h5>
             </div>
           </div>
         </div>
@@ -334,7 +334,7 @@
           <div class="single-stu-box border border-1">
             <img class="img-fluid" src="./assets/images/student/student-2.png" alt="">
             <div class="student-sub p-3">
-              <h4>Awlad Hossain</h4>
+              <h4>shokina aktar</h4>
           <p>UIUX Designer</p>
             </div>
         </div>
@@ -344,7 +344,7 @@
           <div class="single-stu-box border border-1">
             <img class="img-fluid" src="./assets/images/student/student-3.png" alt="">
             <div class="student-sub p-3">
-              <h4>Awlad Hossain</h4>
+              <h4>Shake Shadi</h4>
           <p>UIUX Designer</p>
             </div>
         </div>
@@ -354,7 +354,7 @@
           <div class="single-stu-box border border-1">
             <img class="img-fluid" src="./assets/images/student/student-4.png" alt="">
             <div class="student-sub p-3">
-              <h4>Awlad Hossain</h4>
+              <h4>Jorina </h4>
           <p>UIUX Designer</p>
             </div>
         </div>
